# mnist-classifier

./: CMakeLists.txt  genNN.cpp  net.cpp  net.hpp  neuron.cpp  neuron.hpp  unittests.cpp
iniNets/: net1.txt
